// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post card should render correctly post with featured image 1`] = `
<Link
  replace={false}
  to="/category/some-slug/32/post/mock-slug/1"
>
  <Item
    className="post-item"
  >
    <ItemHeader
      as="h1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Mock title",
        }
      }
    />
    <ItemContent>
      <div
        className="image"
        style={
          Object {
            "backgroundImage": "url(undefined)",
          }
        }
      />
      <ItemDescription
        dangerouslySetInnerHTML={
          Object {
            "__html": "Some mock exceprt to be rendered",
          }
        }
      />
    </ItemContent>
  </Item>
</Link>
`;

exports[`Post card should render correctly post with placeholder image 1`] = `
<Link
  replace={false}
  to="/category/some-slug/32/post/mock-slug/1"
>
  <Item
    className="post-item"
  >
    <ItemHeader
      as="h1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Mock title",
        }
      }
    />
    <ItemContent>
      <ItemDescription
        dangerouslySetInnerHTML={
          Object {
            "__html": "Some mock exceprt to be rendered",
          }
        }
      />
    </ItemContent>
  </Item>
</Link>
`;
